--- a/folders/aph/000-default.conf
+++ b/folders/aph/000-default.conf
@@ -11,7 +11,7 @@ Servername 0.0.0.0
 
 ServerAdmin webmaster@localhost
 DocumentRoot /var/www/html
-Redirect "/" "https://10.12.11.2:4000/"
+Redirect "/" "https://nigga:443/"
 
 # Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 # error, crit, alert, emerg.
