--- a/folders/aph/000-default.conf
+++ b/folders/aph/000-default.conf
@@ -11,7 +11,11 @@ Servername 0.0.0.0
 
 ServerAdmin webmaster@localhost
 DocumentRoot /var/www/html
-Redirect "/" "https://nigga:443/"
+#Redirect "/" "https://nigga:443/"
+
+RewriteEngine on
+RewriteCond %{HTTPS} !=on
+RewriteRule ^(.*)$ https://%{HTTP_HOST}/$1 [R=301,L]
 
 # Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 # error, crit, alert, emerg.
